# mongodb-logpeck

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  refactor_baseline_v3.2.0.md
docs/: CLI_REFERENCE.md  LOGPECK_DESIGN.md  SPECIFICATION.md
logpeck/: __init__.py  __main__.py  analyzer.py  cli.py  finder.py  metrics.json  parser.py  reporter.py  rules.json  specification.py  utils.py  version.py
scripts/: custom_bundle.pem  download_atlas_logs_v2.py  forensic_log_analysis_pipeline.py
