[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logpeck"
version = "5.0.12"
authors = [
    { name = "Tanuj Kumar Bolisetty" }
]
description = "High-fidelity MongoDB Log Forensics & Diagnostic Engine"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-dateutil",
    "rich"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/tanujbolisetty/mongodb-logpeck"

[project.scripts]
peck = "logpeck.cli:main"

[tool.setuptools]
packages = ["logpeck"]
include-package-data = true

[tool.setuptools.package-data]
logpeck = ["*.json"]
